New entries should be added at the top

2005-07-14 Fixed a Windows related bug (#1238412) in texmanager - DSD

2005-07-11 Fixed color kwarg bug, setting color=1 or 0 caused an 
		   exception - DSD

2005-07-07 Added Eric's MA set_xdata Line2D fix - JDH

2005-07-06 Made HOME/.matplotlib the new config dir where the
           matplotlibrc file, the ttf.cache, and the tex.cache live.
           The new default filenames in .matplotlib have no leading
           dot and are not hidden.  Eg, the new names are matplotlibrc
           tex.cache ttffont.cache.  This is how ipython does it so it
           must be right.  If old files are found, a warning is issued
           and they are moved to the new location.  Also fixed
           texmanager to put all files, including temp files in
           ~/.matplotlib/tex.cache, which allows you to usetex in
           non-writable dirs.


2005-07-05 Fixed bug #1231611 in subplots adjust layout.  The problem
           was that the text cacheing mechanism was not using the
           transformation affine in the key. - JDH

2005-07-05 Fixed default backend import problem when using API (SF bug
           # 1209354 -  see API_CHANGES for more info - JDH

2005-07-04 backend_gtk.py: require PyGTK version 2.0.0 or higher - SC

2005-06-30 setupext.py: added numarray_inc_dirs for building against
           numarray when not installed in standard location - ADS


2005-06-27 backend_svg.py: write figure width, height as int, not float.
           Update to fix some of the pychecker warnings - SC
  
2005-06-23 Updated examples/agg_test.py to demonstrate curved paths
           and fills - JDH

2005-06-21 Moved some texmanager and backend_agg tex caching to class
           level rather than instance level - JDH

2005-06-20 setupext.py: fix problem where _nc_backend_gdk is installed to the
           wrong directory - SC

2005-06-19 Added 10.4 support for CocoaAgg. - CM
