@@ -1,5 +1,8 @@
 New entries should be added at the top
 
+2005-07-17 examples/embedding_in_gtk3.py: new example demonstrating placing
+           a FigureCanvas in a gtk.ScrolledWindow - SC
+
 2005-07-14 Fixed a Windows related bug (#1238412) in texmanager - DSD
 
 2005-07-11 Fixed color kwarg bug, setting color=1 or 0 caused an 
